data/diff_tests/wasmtime/if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_2089.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\00\00\60\00\01\7f\02\94\80\80\80\00\01\03\65\6e"
    "\76\0c\6d\6f\64\69\66\79\47\6c\6f\62\61\6c\00\00"
    "\03\83\80\80\80\00\02\01\00\06\86\80\80\80\00\01"
    "\7f\01\41\00\0b\07\88\80\80\80\00\01\04\74\65\73"
    "\74\00\02\0a\9c\80\80\80\00\02\84\80\80\80\00\00"
    "\23\00\0b\8d\80\80\80\00\00\41\01\04\40\10\00\41"
    "\2a\24\00\0b\0b"
  )
""
)